--webkit-visual-word: ctrl-arrow is not able to reach the boundary of line https://bugs.webkit.org/show_bug.cgi?id=61346

Patch by Van Lam <vanlam@google.com> on 2011-08-02
Reviewed by Ryosuke Niwa.

Source/WebCore:

When collecintg word boundaries in a box, explicitly check if the box
is at the end of line (so it should contain the end-of-line position)
and collect the end-of-line position.

* editing/visible_units.cpp:
(WebCore::isBoxVisuallyLastInLine):
(WebCore::appendPositionAtLogicalEndOfLine):
(WebCore::collectWordBreaksInBoxInsideBlockWithSameDirectionality):
(WebCore::collectWordBreaksInBoxInsideBlockWithDifferntDirectionality):

LayoutTests:

Updated test cases to check for visual word movement to the end-of-line
position.

* editing/selection/move-by-word-visually-multi-line-expected.txt:
* editing/selection/move-by-word-visually-multi-line.html:
* editing/selection/move-by-word-visually-multi-space-expected.txt:
* editing/selection/move-by-word-visually-multi-space.html:
* editing/selection/move-by-word-visually-single-space-inline-element-expected.txt:
* editing/selection/move-by-word-visually-single-space-inline-element.html:
* editing/selection/move-by-word-visually-single-space-one-element-expected.txt:
* editing/selection/move-by-word-visually-single-space-one-element.html:

Canonical link: https://commits.webkit.org/81363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92223 268f45cc-cd09-0410-ab3c-d52691b4dbfc